[gd_scene load_steps=2 format=3 uid="uid://yam8ksoyryis"]

[ext_resource type="Script" uid="uid://cxlubwsia0rre" path="res://battle_screen/active_buff_tooltip.gd" id="1_bn4h1"]

[node name="SkillViewPanel" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bn4h1")

[node name="TextureRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(400, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = 2.0
offset_right = 402.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7294118)

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SkillName" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Skill Name"

[node name="Description" type="RichTextLabel" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "rzrhzrhzrhzrh"

[node name="TimeLeft" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 2
